XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>

* Bug fix: enable 'remove recent project' toolbar button properly. Issue #271.
* Expand/collapse grouping items in the object browsers regardless what column
  was double clicked. Issue #242

2011 Sep 13  Sergey Satskiy <sergey.satskiy@gmail.com>

* Prepared for first public release.
* Improvement: provide a hint message in case if pymetrics failed. Issue #265.
* Bug fix: exception in the files browser if there is a syntactically incorrect
  python file in it. Issue #266.

2011 Sep 2  Sergey Satskiy <sergey.satskiy@gmail.com>

* Prepared for first release.